@@ -21,26 +21,30 @@ Change to the parent (example) directory. Start solr by executing the following 
 > cd ..
 > java -Dsolr.solr.home="./example-DIH/solr/" -jar start.jar
 
-in this directory, and when Solr is started connect to 
+in this directory, and when Solr is started connect to:
 
   http://localhost:8983/solr/
 
-To import data from the hsqldb database, connect to
+* To import data from the hsqldb database, connect to:
 
   http://localhost:8983/solr/db/dataimport?command=full-import
 
-To import data from the slashdot feed, connect to
+* To import data from an RSS feed, connect to:
 
   http://localhost:8983/solr/rss/dataimport?command=full-import
 
-To import data from your imap server
+* To import data from your IMAP server:
 
-1. Edit the example-DIH/solr/mail/conf/mail-data-config.xml and add details about username, password, imap server
-2. Connect to http://localhost:8983/solr/mail/dataimport?command=full-import
+  1. Edit the example-DIH/solr/mail/conf/mail-data-config.xml and add details about username, password, IMAP server
+  2. Connect to http://localhost:8983/solr/mail/dataimport?command=full-import
 
-To copy data from db Solr core, connect to
+* To copy data from db Solr core, connect to:
 
- http://localhost:8983/solr/solr/dataimport?command=full-import
+  http://localhost:8983/solr/solr/dataimport?command=full-import
+
+* To index a full text document using Tika integration:
+
+  http://localhost:8983/solr/tika/dataimport?command=full-import
 
 See also README.txt in the solr subdirectory, and check
 http://wiki.apache.org/solr/DataImportHandler for detailed
