@@ -17,6 +17,9 @@
 
 <dataConfig>
   <document>
-    <entity name="sep" processor="SolrEntityProcessor" url="http://127.0.0.1:8983/solr/db " query="*:*"/>
+    <entity name="sep" processor="SolrEntityProcessor"
+            url="http://127.0.0.1:8983/solr/db "
+            query="*:*"
+            fl="*,orig_version_l:_version_"/>
   </document>
 </dataConfig>
